@@ -1,14 +1,3 @@
-Option -r added
+Options -p and -u added for timestamping
 
-Postforking now even more usable with the new option -r and the two
-environment variables SOCKLINGER_COUNT and SOCKLINGER_MAX.  This is to
-be able to do statistics and cleanups to notekeeping.
-
-When forks are guaranteed to be slow (or with a high delay setting)
-such that there cannot be any race condition, then you can use the
-environment variables to do the cleanup.
-
-On a high fork frequency you can use option -r, such that the process
-slots are cycled.  As each slot then is visited in a round robin
-fashion, you can do the notekeeping (and possible cleanups) at the
-beginning.
+Also source update to latest library changes
